data/derived/comb/progs/unify/prog6827.ml.out
Characters 29-35:
  let fixpoint (f,b) = wwhile ((true),b);;
                               ^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
